--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  responsive_sizer: ^3.2.0
+  http: ^1.1.0
+  image_picker: ^1.0.4
+  provider: ^6.0.5
+  get_storage: ^2.1.1
+  loading_animation_widget: ^1.2.0+4
+  flutter_launcher_icons: ^0.13.1
+  ionicons: ^0.2.2
+
 
 dev_dependencies:
   flutter_test:
@@ -46,6 +55,11 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  # Executer flutter pub run flutter_launcher_icons:main pour changer le logo de l'application
+  image_path: "assets/icons/logo.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -59,8 +73,11 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+      - assets/
+      - assets/icons/logo.png
+      - assets/reactionsApp/errorInatendu.gif
+      - assets/images/welcome_bg.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
