--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,9 @@ dependencies:
   ionicons: ^0.2.2
   carousel_slider: ^4.2.1
   motion_toast: ^2.8.0
-
+  go_router: ^13.2.0
+  animated_notch_bottom_bar: ^1.0.0
+  salomon_bottom_bar: ^3.3.2
 
 dev_dependencies:
   flutter_test:
