--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,10 +44,9 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   ionicons: ^0.2.2
   carousel_slider: ^4.2.1
-  motion_toast: ^2.8.0
   go_router: ^13.2.0
-  animated_notch_bottom_bar: ^1.0.0
   salomon_bottom_bar: ^3.3.2
+  faker: ^2.1.0
 
 dev_dependencies:
   flutter_test:
