--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   go_router: ^13.2.0
   salomon_bottom_bar: ^3.3.2
   faker: ^2.1.0
+  cached_network_image: ^3.3.1
+  flutter_bloc: ^8.1.3
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
