--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,9 +47,13 @@ dependencies:
   go_router: ^13.2.0
   salomon_bottom_bar: ^3.3.2
   faker: ^2.1.0
+  form_field_validator: ^1.1.0
+  flutter_svg: ^2.0.6
   cached_network_image: ^3.3.1
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
+  connectivity_plus: ^6.0.5
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
